2008-12-13 Borut Razem <borut.razem AT siol.net>

	* packages/build.libtool/*: added

2008-12-12 Borut Razem <borut.razem AT siol.net>

	* etc/*, .sdcc_builder/*: added

2008-10-31 Borut Razem <borut.razem AT siol.net>

	* packages/build.autoconf/*, packages/build.automake/*: added

2008-09-26 Borut Razem <borut.razem AT siol.net>

	* bin/dcf.sh: call rm_old_versions only if anything was uploaded

2008-09-24 Borut Razem <borut.razem AT siol.net>

	* bin/dcf.sh: new SF web server sdcc-builder,sdcc@web.sourceforge.net
	* rm_old_versions () implemented by using sftp instead ssh

2008-09-14 Borut Razem <borut.razem AT siol.net>

	* packages/build.popt/*: added
	* packages/build.gpsim/Makefile: use glibtoolize on Mac OS X
	* packages/build.ncurses/Makefile: use Xcode2.5 on Mac OS X
	* packages/packages.mk: remove /sw/* include and lib search path

2008-08-24 Borut Razem <borut.razem AT siol.net>

	* packages/build.cpan/Makefile: ask perl for the version number

2008-05-24 Borut Razem <borut.razem AT siol.net>

	* packages/build.gputils/Makefile: upgraded to gputils-0.13.6

2008-03-28 Borut Razem <borut.razem AT siol.net>

	* packages/build.cpan/*: added

2008-02-26 Borut Razem <borut.razem AT siol.net>

	* packages/build.nsis/Makefile: updated to NSIS version 2.35

2008-02-19 Borut Razem <borut.razem AT siol.net>

	* packages/build.gputils/Makefile: possibiliy to build gputils from
	  a release package or svn repository if FROM_SVN is defined
	* packages/build.wget/*: added

2008-02-17 Borut Razem <borut.razem AT siol.net>

	* packages/build.mingw32/Makefile: updated to gcc-4.2.3, w32api-3.11,
	  mingw-runtime-3.14

2008-01-12 Borut Razem <borut.razem AT siol.net>

	* packages/build.nsis/Makefile: updated to NSIS version 2.34
	* crontab.txt: execute .bash_profile instead of .bashrc on cf-x86

2007-09-03 Borut Razem <borut.razem AT siol.net>

	* packages/build.gputils/Makefile: get gputils sources from CVS

2007-08-04 Borut Razem <borut.razem AT siol.net>
